<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_text">java is object oriented language</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="question_australia">Which is the capital of Australia?</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="next_button">Next</string>
    <string name="answer_0_button">Brisbane</string>
    <string name="answer_1_button">Canberra</string>
    <string name="answer_2_button">Melbourne</string>
    <string name="answer_3_button">Sydney</string>
    <string name="lifeline_button">50:50</string>
    <string name="reset_button">RESET</string>>
</resources>